impl navbar view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'common/navbar' %>
+    <div style="margin-top:40px;">
+      <%= yield %>
+    </div>
   </body>
 </html>
