--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -33,26 +33,28 @@
                 </tr>
             </table>
             <a class="btn btn-warning">終了した</a>
-            <br><br>
+            </div>
+            <br>
             <% if @task.parent_task_id == 0 then %>
                 <h4><i class="fas fa-asterisk"></i> 含まれる作業</h4>
-                <div class="list-group">
-                    <% Task.where(:t_number => @task.t_number, :work_id => @task.work.id).each do |t_task| %>
-                        <% if t_task.parent_task_id == 0 then %>
-                            <div class="list-group-item list-group-item-action active">
-                                <a href="/tasks/<%= t_task.id %>" style="color:white;"><%= t_task.t_name %></a>
-                            </div>
-                        <% else %>
-                            <div class="list-group-item list-group-item-action">
-                                <a href="/tasks/<%= t_task.id %>"><%= t_task.t_name %></a>
-                            </div>     
-                        <% end %>           
-                    <% end %>
+                <div class="schedule-detail-section">
+                    <div class="list-group">
+                        <% Task.where(:t_number => @task.t_number, :work_id => @task.work.id).each do |t_task| %>
+                            <% if t_task.parent_task_id == 0 then %>
+                                <div class="list-group-item list-group-item-action active">
+                                    <a href="/tasks/<%= t_task.id %>" style="color:white;"><%= t_task.t_name %></a>
+                                </div>
+                            <% else %>
+                                <div class="list-group-item list-group-item-action">
+                                    <a href="/tasks/<%= t_task.id %>"><%= t_task.t_name %></a>
+                                </div>     
+                            <% end %>           
+                        <% end %>
+                    </div>
                 </div>
                 <br>
             <% end %>
             <a href="/works/<%= @task.work.w_url %>" class="btn btn-danger" style="margin-top:20px;">戻る</a>
-            </div>
         </div>
         <div class="col-sm-4">
             <div class="task-detail-left">
