--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -6,6 +6,7 @@
         <br>
         <form action="/works/new" method="get" >
         <div class="row">
+        <!--
         <div class="col-sm-6">
             <div class="top-page-input">
             <label name="name1">幹部1</label>
@@ -24,15 +25,25 @@
             <input type="text" name="name4" class="form-control" style="width:200px;" value="四谷"></input>
             </div>
         </div>
-        <div class="col-sm-6">
+        -->
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-6 text-center">
             <div class="top-page-input">
                 <label name="start-date">合宿開始日</label>
                 <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-07-07"></input>
                 <label name="end-date">合宿終了日</label>
                 <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-07-14"></input>
-                <br>
+                <label name="schedule-type">目的</label>
+                <select  name="schedule-type" class="form-control" style="width:200px;">
+                    <option name="nomikai">飲み会</option>
+                    <option name="normal">自分で作る</option>
+                    <option name="gassyuku">合宿</option>
+                </select>
+                <div class="text-center" style="margin: 0 auto;">
                 <label name="email">代表者メールアドレス</input>
                 <input type="email" name="email" class="form-control" style="width:300px" placeholder="example@example.com"></input>
+                </div>
             </div>
         </div>
         </div>
