--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -25,10 +25,6 @@
                     </a>
                 <% end %>
             </div>
-            <br>
-            <h4><i class="fas fa-angle-double-right"></i>内容</h4>
-            <br>
-            <p>まだ情報が少ないため、表示できません。</p>
         </div>
         <div class="col-sm-5">
             <h3><i class="fas fa-angle-double-right"></i><%= @work.w_name %>の進捗</h3>
@@ -47,9 +43,26 @@
                   <span class="btn btn-success" style="color:white;float:right;">未終了</span>
                 </a>
             </div>
+            <br>
+            <hr>
+            <h3><i class="fas fa-angle-double-right"></i>役割</h3>
+            <br>
+            <div class="list-group">
+            <% @work.tasks.select(:role).distinct.each do |t_role| %>
+                <div class="list-group-item list-group-item-action">
+                    <i class="fas fa-user-circle"></i>　<%= t_role.role %><br>
+                    <input type="text" class="form-control" style="width:120px;display:inline-block;" placeholder="名前を入力">
+                    <input type="submit" class="btn btn-xs btn-success" value="送信する" style="display:inline-block;margin-left:10px;margin-bottom:5px;width:70px;padding-left:5px;">
+                </div>
+            <% end %>
         </div>
     </div>
-    <br>
+    <div class="" style="margin-top:40px;">
+        <h4><i class="fas fa-angle-double-right"></i>内容</h4>
+        <br>
+        <p>まだ情報が少ないため、表示できません。</p>
+        <br>
+    </div>
     <div>
         <h4><i class="fas fa-angle-double-right"></i>スケジュール</h4>
         <br>
