--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -55,6 +55,7 @@
                     <input type="submit" class="btn btn-xs btn-success" value="送信する" style="display:inline-block;margin-left:10px;margin-bottom:5px;width:70px;padding-left:5px;">
                 </div>
             <% end %>
+            </div>
         </div>
     </div>
     <div class="" style="margin-top:40px;">
