fix schedule top

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -31,18 +31,18 @@
         <div class="col-sm-6 text-center">
             <div class="top-page-input">
                 <label name="start-date">合宿開始日</label>
-                <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-07-07"></input>
+                <input type="date" name="start-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-07-07"></input>
                 <label name="end-date">合宿終了日</label>
-                <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-07-14"></input>
+                <input type="date" name="end-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-07-14"></input>
                 <label name="schedule-type">目的</label>
-                <select  name="schedule-type" class="form-control" style="width:200px;">
+                <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
                     <option name="nomikai">飲み会</option>
                     <option name="normal">自分で作る</option>
                     <option name="gassyuku">合宿</option>
                 </select>
-                <div class="text-center" style="margin: 0 auto;">
+                <div>
                 <label name="email">代表者メールアドレス</input>
-                <input type="email" name="email" class="form-control" style="width:300px" placeholder="example@example.com"></input>
+                <input type="email" name="email" class="form-control" style="width:300px;margin 0 auto;" placeholder="example@example.com"></input>
                 </div>
             </div>
         </div>
