--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -92,10 +92,15 @@
         <br>
         <h4><i class="fas fa-angle-double-right"></i>全タスク表</h4>
         <br>
-        <div class="list-group">
+        <div class="row">
         <% @tasks.each do |z_task| %>
             <% if z_task.parent_task_id == 0 %>
-                <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action active">
+                <% if z_task.t_number != 1 %>
+                    </div>
+                <% end %>
+                <div class="col-sm-6" style="margin-bottom:20px;">
+                <div class="list-group">
+                    <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action active">
             <% else %>
                 <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action">
             <% end %>
@@ -106,8 +111,14 @@
                 <br>
                 <i class="fas fa-clock"></i>　<%= z_task.end_date %>まで
                 </small>
-                <span class="btn btn-success" style="float:right;color:white;margin-top:-20px;">未終了</span>
+                <br><br>
+                <p>
+                <span class="btn btn-success" style="color:white;margin-top:-20px;">未終了</span>
+                </p>
             </a>
+            <% if z_task.parent_task_id == 0 %>
+                </div>
+            <% end %>
         <% end %>
         </div>
     </div>
