add top search design2

--- a/app/assets/stylesheets/style.scss.css
+++ b/app/assets/stylesheets/style.scss.css
@@ -24,6 +24,13 @@
   min-height:500px;
 }
 
+.calendar-card-btn{
+  color:white;
+  height:18px;
+  font-size:10px;
+  padding-top:2px;
+}
+
 .sd-days{}
 
 .d-day{ display:inline-block; }
